--- a/RFIDP2P3_Web/wwwroot/css/Main.css
+++ b/RFIDP2P3_Web/wwwroot/css/Main.css
@@ -18,7 +18,7 @@
 }
 
 .sidebar {
-    width: 85px;
+    width: 0px;
     position: fixed;
     z-index: 99;
     height: 99%;
@@ -226,7 +226,7 @@ h3 {
     }
 
     .sidebar{
-        width:90px;
+        width:0;
         top: 55px;
     }
 
