--- a/RFIDP2P3_Web/wwwroot/css/Main.css
+++ b/RFIDP2P3_Web/wwwroot/css/Main.css
@@ -171,7 +171,7 @@ span {
 
 #content {
     padding: 16px;
-    margin-left: 85px;
+    
     transition: margin-left 0.5s;
 }
 
@@ -211,6 +211,10 @@ hr {
 
 h3 {
     font-size: 20px;
+}
+
+.page-main{
+    margin-left:10px !important;
 }
 
 .username {
