--- a/RFIDP2P3_Web/Views/Master/MasterGIP2.cshtml
+++ b/RFIDP2P3_Web/Views/Master/MasterGIP2.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-	ViewData["Title"] = "Master GI P2";
+	ViewData["Title"] = "master GI P2";
 }
 
 <style>
@@ -116,7 +116,7 @@
 
 <div class="page-main">
 	<div class="page-content">
-		<h3>Master GI P2</h3>
+		<h3>master GI P2</h3>
 		<hr>
 		<div id="grid" style="margin-top:5px; margin-bottom:5px;"></div>
 		<!-- The Modal -->
@@ -125,22 +125,22 @@
 			<div class="modal-content">
 				<div class="" role="document">
 					<div class="modal-header">
-						<h4 class="modal-title" id="myModalLabel">Add GI P2</h4>
+						<h4 class="modal-title" id="myModalLabel">Add New</h4>
 					</div>
 					<div class="modal-body">
 						<div class="panel">
 							<div class="panel-body">
-								<form class="form-horizontal" id="submitMasterUser">
+								<form class="form-horizontal" id="submitForm">
 									<div class="flex">
-										<div class="form-group form-material col-md-3">
+										<div class="form-group form-material col-md-4">
 											<label class="col-sm-10 control-label">Plant</label>
 											<div class="col-sm-10">
-												<input class="form-control" id="PlantId" required />
+												<input class="form-control" id="PlantID" required />
 											</div>
 										</div>
 									</div>
 									<div class="flex">
-										<div class="form-group form-material col-md-3">
+										<div class="form-group form-material col-md-4">
 											<label class="col-sm-10 control-label">Shop</label>
 											<div class="col-sm-10">
 												<input class="form-control" id="ShopId" required />
@@ -148,7 +148,7 @@
 										</div>
 									</div>
 									<div class="flex">
-										<div class="form-group form-material col-md-3">
+										<div class="form-group form-material col-md-4">
 											<label class="col-sm-10 control-label">Department</label>
 											<div class="col-sm-10">
 												<input class="form-control" id="DeptId" required />
@@ -159,7 +159,7 @@
 										<div class="form-group form-material col-md-6">
 											<label class="col-sm-10 control-label">Cost Center</label>
 											<div class="col-sm-10">
-												<input type="text" class="form-control" id="CostCenter" />
+												<input type="text" class="form-control" id="CostCenter" required />
 											</div>
 										</div>
 									</div>
@@ -179,6 +179,127 @@
 </div>
 
 <script>
+	var GIP2Id = '0'; var IUType = 'I';
+
+
+	$("#PlantID").kendoDropDownList({
+		template: '<span>#:data.PlantID# - #:data.PlantName#</span>',
+		valueTemplate: '<span>#:data.PlantID# - #:data.PlantName#</span>',
+		footerTemplate: 'Total number of <strong>#: instance.dataSource.total() #</strong> Plant found',
+		optionLabel: "select user group...",
+		dataValueField: "PlantID",
+		dataSource: {
+			transport: {
+				read: function (options) {
+					$.ajax({
+						method: 'post',
+						headers: { 'Content-Type': 'application/json', 'XApiKey': 'pgH7QzFHJx4w46fI~5Uzi4RvtTwlEXp' },
+						url: 'https://localhost:7072/api/DropDown/INQ',
+						dataType: 'text',
+						data: JSON.stringify({ Ftype: "Plant", Plant: "" })
+					}).done(function (data, textStatus, jqXHR) {
+						try {
+							var result = JSON.parse(data);
+						}
+						catch (e) {
+							swal.fire('Error', 'Error loading grid', 'error');
+							options.success({ data: [] });
+							return;
+						}
+						options.success(result);
+					}).fail(function (jqXHR, textStatus, errorThrown) {
+						swal.fire('Error', (jqXHR.responseText !== '' ? ': ' + jqXHR.responseText : ''), 'error');
+						options.success({ data: [] });
+					});
+				}
+			}
+		},
+		change: function (e) {
+			var value = this.value();
+			getShop(value);
+			// Use the value of the widget
+		}
+	}).data("kendoDropDownList");
+
+	function getShop(plant) {
+
+		$("#ShopId").kendoDropDownList({
+			template: '<span>#:data.ShopId# - #:data.ShopName#</span>',
+			valueTemplate: '<span>#:data.ShopId# - #:data.ShopName#</span>',
+			footerTemplate: 'Total number of <strong>#: instance.dataSource.total() #</strong> Shop found',
+			optionLabel: "select Shop...",
+			dataValueField: "ShopId",
+			dataSource: {
+				transport: {
+					read: function (options) {
+						$.ajax({
+							method: 'post',
+							headers: { 'Content-Type': 'application/json', 'XApiKey': 'pgH7QzFHJx4w46fI~5Uzi4RvtTwlEXp' },
+							url: 'https://localhost:7072/api/DropDown/INQ',
+							dataType: 'text',
+							data: JSON.stringify({ Ftype: "Shop", Plant: plant })
+						}).done(function (data, textStatus, jqXHR) {
+							try {
+								var result = JSON.parse(data);
+							}
+							catch (e) {
+								swal.fire('Error', 'Error loading grid', 'error');
+								options.success({ data: [] });
+								return;
+							}
+							options.success(result);
+						}).fail(function (jqXHR, textStatus, errorThrown) {
+							swal.fire('Error', (jqXHR.responseText !== '' ? ': ' + jqXHR.responseText : ''), 'error');
+							options.success({ data: [] });
+						});
+					}
+				}
+			},
+			change: function (e) {
+				var value = this.value();
+				getDept(plant, value);
+				// Use the value of the widget
+			}
+		}).data("kendoDropDownList");
+	}
+
+	function getDept(plant) {
+
+		$("#DeptId").kendoDropDownList({
+			template: '<span>#:data.DeptID# - #:data.DeptName#</span>',
+			valueTemplate: '<span>#:data.DeptID# - #:data.DeptName#</span>',
+			footerTemplate: 'Total number of <strong>#: instance.dataSource.total() #</strong> Shop found',
+			optionLabel: "select Department...",
+			dataValueField: "DeptID",
+			dataSource: {
+				transport: {
+					read: function (options) {
+						$.ajax({
+							method: 'post',
+							headers: { 'Content-Type': 'application/json', 'XApiKey': 'pgH7QzFHJx4w46fI~5Uzi4RvtTwlEXp' },
+							url: 'https://localhost:7072/api/DropDown/INQ',
+							dataType: 'text',
+							data: JSON.stringify({ Ftype: "Dept", Plant: plant })
+						}).done(function (data, textStatus, jqXHR) {
+							try {
+								var result = JSON.parse(data);
+							}
+							catch (e) {
+								swal.fire('Error', 'Error loading grid', 'error');
+								options.success({ data: [] });
+								return;
+							}
+							options.success(result);
+						}).fail(function (jqXHR, textStatus, errorThrown) {
+							swal.fire('Error', (jqXHR.responseText !== '' ? ': ' + jqXHR.responseText : ''), 'error');
+							options.success({ data: [] });
+						});
+					}
+				}
+			}
+		}).data("kendoDropDownList");
+	}
+
 	var AppD = {
 		attachEvents: function () {
 			var o = this;
@@ -193,22 +314,21 @@
 			var o = this;
 			o.dom.$grid = $("#grid");
 			o.dom.inputs = {};
-			o.dom.inputs.$inputUserID = $("#User_Id");
-			o.dom.inputs.$inputName = $("#Name");
-			o.dom.inputs.$inputPassword = $("#Password");
-			o.dom.inputs.$inputUserGroup = $("#UserGroup_Id");
-			o.dom.inputs.$inputUserGroup1 = $("#UserGroup_Id1");
-			o.dom.inputs.$inputUserGroup2 = $("#UserGroup_Id2");
+			o.dom.inputs.$inputPlantID = $("#PlantID");
+			o.dom.inputs.$inputDeptName = $("#DeptName");
 		},
 		data: {},
 		dom: {},
 		eventHandlers: {
 			onClickBtnCreate: function () {
 				var o = this;
-				$('#myModalLabel').html('Add GI P2');
-				o.dom.inputs.$inputName.val('');
-				o.dom.inputs.$inputUserGroup.data("kendoDropDownList").value('');
-
+				$('#myModalLabel').html('Add New');
+				GIP2Id = '0';
+				IUType = 'I';
+				o.dom.inputs.$inputDeptName.val('');
+				o.dom.inputs.$inputPlantID.data("kendoDropDownList").value('');
+				getShop('X');
+				getDept('X');
 				var modal = document.getElementById("myModal");
 				modal.style.display = "block";
 				window.onclick = function (event) {
@@ -236,11 +356,10 @@
 						$.ajax({
 							method: 'post',
 							headers: { 'Content-Type': 'application/json', 'XApiKey': 'pgH7QzFHJx4w46fI~5Uzi4RvtTwlEXp' },
-							url: 'https://localhost:7072/api/MasterUser/DEL',
+							url: 'https://localhost:7072/api/masterGIP2/DEL',
 							dataType: 'text',
 							data: JSON.stringify({
-								PIC_ID: di.PIC_ID,
-								UserLogin: "@Context.Session.GetString("PIC_ID")"
+								GIP2Id: di.GIP2Id
 							})
 						}).done(function (data, textStatus, jqXHR) {
 							if (data !== 'success') {
@@ -262,11 +381,15 @@
 			},
 			onClickBtnUpdate: function (e) {
 				var o = this;
-				$('#myModalLabel').html('Edit GI P2');
+				$('#myModalLabel').html('Edit GIP2');
 				var di = o.dom.$grid.data('kendoGrid').dataItem($(e.target).closest('tr'));
-
-				o.dom.inputs.$inputName.val(di.PIC_Name);
-				o.dom.inputs.$inputUserGroup.data("kendoDropDownList").value(di.UserGroup_Id);
+				GIP2Id = di.GIP2Id;
+				o.dom.inputs.$inputDeptName.val(di.DeptName);
+				o.dom.inputs.$inputPlantID.data("kendoDropDownList").value(di.PlantID);
+				getShop(di.PlantID);
+				getDept(di.PlantID);
+				$("#ShopId").data("kendoDropDownList").value(di.ShopId);
+				IUType = 'U';
 
 				var modal = document.getElementById("myModal");
 				modal.style.display = "block";
@@ -292,7 +415,7 @@
 
 			o.dom.$grid.kendoGrid({
 				excel: {
-					fileName: "Master GI P2.xlsx",
+					fileName: "master GI P2.xlsx",
 					allPages: true,
 					filterable: true
 				},
@@ -302,7 +425,7 @@
 							$.ajax({
 								method: 'post',
 								headers: { 'Content-Type': 'application/json', 'XApiKey': 'pgH7QzFHJx4w46fI~5Uzi4RvtTwlEXp' },
-								url: 'https://localhost:7072/api/MasterUser/INQ',
+								url: 'https://localhost:7072/api/MasterGIP2/INQ',
 								dataType: 'text',
 								data: JSON.stringify({
 									UserLogin: "@Context.Session.GetString("PIC_ID")"
@@ -310,6 +433,7 @@
 							}).done(function (data, textStatus, jqXHR) {
 								try {
 									var result = JSON.parse(data);
+									console.log(data);
 								}
 								catch (e) {
 									swal.fire('Error', 'Error loading grid', 'error');
@@ -326,7 +450,7 @@
 					schema: {
 						model: {
 							id: "GIP2Id",
-							fields: {								
+							fields: {
 								GIP2Id: { type: "string" },
 								PlantId: { type: "string" },
 								PlantName: { type: "string" },
@@ -396,18 +520,18 @@
 					{
 						field: "ShopName",
 						title: "Shop",
-						width: 200
+						width: 150
+					},
+					{
+						field: "DeptId",
+						title: "Department",
+						width: 100,
+						hidden: true
 					},
 					{
 						field: "DeptName",
-						title: "Department",
-						width: 200
-					},
-					{
-						field: "CostCenter",
-						title: "Cost Center",
+						title: "Department Name",
 						width: 100,
-						hidden: true
 					},
 					{
 						title: "Last Update",
@@ -426,114 +550,12 @@
 				toolbar: $("#template_toolbar").html(),
 			});
 
-			$("#UserGroup_Id1").kendoDropDownList({
-				template: '<span>#:data.UserGroup_Id# - #:data.UserGroup#</span>',
-				valueTemplate: '<span>#:data.UserGroup_Id# - #:data.UserGroup#</span>',
-				footerTemplate: 'Total number of <strong>#: instance.dataSource.total() #</strong> User Group found',
-				optionLabel: "select user group...",
-				dataValueField: "UserGroup_Id",
-				dataSource: {
-					transport: {
-						read: function (options) {
-							$.ajax({
-								method: 'post',
-								headers: { 'Content-Type': 'application/json', 'XApiKey': 'pgH7QzFHJx4w46fI~5Uzi4RvtTwlEXp' },
-								url: 'https://localhost:7072/api/MasterUserGroup/INQ',
-								dataType: 'text',
-								data: JSON.stringify({ UserGroup_Id: "@Context.Session.GetString("UserGroup_Id")" })
-							}).done(function (data, textStatus, jqXHR) {
-								try {
-									var result = JSON.parse(data);
-								}
-								catch (e) {
-									swal.fire('Error', 'Error loading grid', 'error');
-									options.success({ data: [] });
-									return;
-								}
-								options.success(result);
-							}).fail(function (jqXHR, textStatus, errorThrown) {
-								swal.fire('Error', (jqXHR.responseText !== '' ? ': ' + jqXHR.responseText : ''), 'error');
-								options.success({ data: [] });
-							});
-						}
-					}
-				}
-			}).data("kendoDropDownList");
-			$("#UserGroup_Id2").kendoDropDownList({
-				template: '<span>#:data.UserGroup_Id# - #:data.UserGroup#</span>',
-				valueTemplate: '<span>#:data.UserGroup_Id# - #:data.UserGroup#</span>',
-				footerTemplate: 'Total number of <strong>#: instance.dataSource.total() #</strong> User Group found',
-				optionLabel: "select user group...",
-				dataValueField: "UserGroup_Id",
-				dataSource: {
-					transport: {
-						read: function (options) {
-							$.ajax({
-								method: 'post',
-								headers: { 'Content-Type': 'application/json', 'XApiKey': 'pgH7QzFHJx4w46fI~5Uzi4RvtTwlEXp' },
-								url: 'https://localhost:7072/api/MasterUserGroup/INQ',
-								dataType: 'text',
-								data: JSON.stringify({ UserGroup_Id: "@Context.Session.GetString("UserGroup_Id")" })
-							}).done(function (data, textStatus, jqXHR) {
-								try {
-									var result = JSON.parse(data);
-								}
-								catch (e) {
-									swal.fire('Error', 'Error loading grid', 'error');
-									options.success({ data: [] });
-									return;
-								}
-								options.success(result);
-							}).fail(function (jqXHR, textStatus, errorThrown) {
-								swal.fire('Error', (jqXHR.responseText !== '' ? ': ' + jqXHR.responseText : ''), 'error');
-								options.success({ data: [] });
-							});
-						}
-					}
-				}
-			}).data("kendoDropDownList");
-			$("#UserGroup_Id").kendoDropDownList({
-				template: '<span>#:data.UserGroup_Id# - #:data.UserGroup#</span>',
-				valueTemplate: '<span>#:data.UserGroup_Id# - #:data.UserGroup#</span>',
-				footerTemplate: 'Total number of <strong>#: instance.dataSource.total() #</strong> User Group found',
-				optionLabel: "select user group...",
-				dataValueField: "UserGroup_Id",
-				dataSource: {
-					transport: {
-						read: function (options) {
-							$.ajax({
-								method: 'post',
-								headers: { 'Content-Type': 'application/json', 'XApiKey': 'pgH7QzFHJx4w46fI~5Uzi4RvtTwlEXp' },
-								url: 'https://localhost:7072/api/MasterUserGroup/INQ',
-								dataType: 'text',
-								data: JSON.stringify({ UserGroup_Id: "@Context.Session.GetString("UserGroup_Id")" })
-							}).done(function (data, textStatus, jqXHR) {
-								try {
-									var result = JSON.parse(data);
-								}
-								catch (e) {
-									swal.fire('Error', 'Error loading grid', 'error');
-									options.success({ data: [] });
-									return;
-								}
-								options.success(result);
-							}).fail(function (jqXHR, textStatus, errorThrown) {
-								swal.fire('Error', (jqXHR.responseText !== '' ? ': ' + jqXHR.responseText : ''), 'error');
-								options.success({ data: [] });
-							});
-						}
-					}
-				}
-			}).data("kendoDropDownList");
-
-			$("#submitMasterUser").submit(function (e) {
+			$("#submitForm").submit(function (e) {
 				e.preventDefault(); // avoid to execute the actual submit of the form.
 
-				var UID = document.getElementById("User_Id").value;
-				var Password = document.getElementById("Password").value;
-				var Name = document.getElementById("Name").value;
-				var UserGroup = document.getElementById("UserGroup_Id").value;
-
+				//var GIP2Id = $("#GIP2Id").val();
+				var DeptId = $("#DeptId").val();
+				var CostCenter = $("#CostCenter").val();
 				swal.fire({
 					title: "Save?",
 					icon: 'question',
@@ -544,13 +566,13 @@
 						$.ajax({
 							method: 'post',
 							headers: { 'Content-Type': 'application/json', 'XApiKey': 'pgH7QzFHJx4w46fI~5Uzi4RvtTwlEXp' },
-							url: 'https://localhost:7072/api/MasterUser/INS',
+							url: 'https://localhost:7072/api/masterGIP2/INS',
 							dataType: 'text',
 							data: JSON.stringify({
-								PIC_ID: UID,
-								PIC_Name: Name,
-								password: Password,
-								UserGroup_Id: UserGroup,
+								GIP2Id: GIP2Id,
+								DeptId: DeptId,
+								CostCenter: CostCenter,
+								IUType: IUType,
 								UserLogin: "@Context.Session.GetString("PIC_ID")"
 							})
 						}).done(function (data, textStatus, jqXHR) {
@@ -583,6 +605,14 @@
 	{
 						<button data-toggle="tooltip" title="Create" type="button" class="btn ink-reaction btn-floating-action btn-xs " id="btnCreate">
 							<i class="k-icon k-i-plus"></i><span>Add New</span>
+						</button>
+						<div class = "spacew"></div>
+						<button data-toggle="tooltip" title="Upload" type="button" class="btn ink-reaction btn-floating-action btn-xs " id="btnUpload">
+							<i class="k-icon k-i-upload"></i><span>Upload</span>
+						</button>
+						<div class = "spacew"></div>
+						<button data-toggle="tooltip" title="Download" type="button" class="btn ink-reaction btn-floating-action btn-xs " id="btnDownload">
+							<i class="k-icon k-i-download"></i><span>Download</span>
 						</button>
 						<div class = "spacew"></div>
 	}
